--- a/index.html
+++ b/index.html
@@ -26,14 +26,103 @@
         </nav>
         <section class="first-sec">
             <div class="text-first">
-                <h1>Conmebol <span>Copa America</span> 2021</h1>
+                <h1>Conmebol <br>Copa America 2021</h1>
             </div>
             <div class="img-first">
                 <img src="responsive-football-main/images/banner1.png" alt="">
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <div class="container">
+            <div class="players">
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-1.png"></div>
+                    <div>
+                        <h2>Neymar Jr</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-2.png"></div>
+                    <div>
+                        <h2>Leonel Messi</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-3.png"></div>
+                    <div>
+                        <h2>Cristiano Ronaldo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-4.png"></div>
+                    <div>
+                        <h2>Paulo Dybala</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-5.png"></div>
+                    <div>
+                        <h2>Mesut Özil</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-6.png"></div>
+                    <div>
+                        <h2>Mouro Icardi</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-7.png"></div>
+                    <div>
+                        <h2>Di Maria</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-8.png"></div>
+                    <div>
+                        <h2>Kylian Mbappé</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-9.png"></div>
+                    <div>
+                        <h2>Mohamed Salah</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-10.png"></div>
+                    <div>
+                        <h2>Harry Kane</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-11.png"></div>
+                    <div>
+                        <h2>Kevin De Bruyne</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+                <article class="player">
+                    <div><img src="responsive-football-main/images/players/player-12.png"></div>
+                    <div>
+                        <h2>Philippe Coutinho</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil, maxime porro provident.</p>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
