--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section class="first-sec">
             <div class="text-first">
                 <h1>Conmebol <br>Copa America 2021</h1>
+                <a href="" class="watch-btn">Watch Live</a>
             </div>
             <div class="img-first">
                 <img src="responsive-football-main/images/banner1.png" alt="">
@@ -122,6 +123,10 @@
                 </article>
             </div>
         </div>
+        <section>
+            <div class="text-second"></div>
+            <div class="img-second"></div>
+        </section>
     </main>
     <footer></footer>
 </body>
