--- a/index.html
+++ b/index.html
@@ -123,11 +123,24 @@
                 </article>
             </div>
         </div>
-        <section>
-            <div class="text-second"></div>
-            <div class="img-second"></div>
+        <section class="second-sec">
+            <div class="text-second">
+                <h1>All Highlights Copa America 2021</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, porro sit commodi veniam nostrum numquam recusandae vero, debitis perspiciatis quod quisquam modi, voluptatum non! Aliquid quis minus inventore sunt corporis!</p>
+                <a href="" class="watch-btn sec-btn">Watch Now</a>
+            </div>
+            <div class="img-second"><img src="responsive-football-main/images/match.png" alt=""></div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-logo"><img src="responsive-football-main/images/Logo.png"></div>
+        <div class="social-icon">
+            <a href=""><img src="responsive-football-main/images/Social Icons/Instagram.png"></a>
+            <a href=""><img src="responsive-football-main/images/Social Icons/Dribbble.png"></a>
+            <a href=""><img src="responsive-football-main/images/Social Icons/Twitter.png"></a>
+            <a href=""><img src="responsive-football-main/images/Social Icons/Youtube.png"></a>
+        </div>
+        <div class="foot"><p>Copyright © 2022 Football</p></div>
+    </footer>
 </body>
 </html>
